--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,16 @@
 name = "todo-rust"
 version = "0.1.0"
 authors = ["Moises Torres <torresmoisesa@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyerror = "0.1.13"
+anyhow = "1.0.100"
+clap = { version = "4.5.48", features = ["derive"] }
+git2 = "0.20.2"
+octocrab = "0.45.0"
+reqwest = "0.12.23"
+serde = "1.0.228"
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
